[package]
name = "dayz_map_generator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.22", features = ["glow", "default_fonts"] }

# Optional: Explicit winapi, in case features don't propagate correctly
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
noise = "0.7"
image = "0.24"
rand = "0.8"
rayon = "1.7"
rfd = "0.12"